--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 
 
 
+<img width="100px" src="./th (1).jpg" alt="">
+
+
+
+<body style="background-color: rgb(238, 144, 233)"></body>    
+
 
 
 
